# Bitlet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/bitlet_core/: app_setup.py  bit_handler.py  config.py  defaults.py  runner.py
